# akali

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_ch.md  build.bat  build_shared.bat  build_static.bat  run_cmake.bat  run_cmake_shared.bat
CMake/: akali-config.cmake  ppxbase-config.cmake
include/: akali.h  ppx.h  ppx_base.h  ppx_config.h  ppx_config.h.in  ppx_export.h
include/akali/: akali_export.h  arch.h  assert.h  base64.h  buffer_queue.h  byteorder.h  cmdline_parse.h  constructormagic.h  criticalsection.h  deprecation.h  directory_monitor.h  display_monitors.h  driver_info.h  endianess_detect.h  file_info.h  file_util.h  filesystem.hpp  flags.h  host_resolve.h  ini.h  internet_availability_checker.h  iocp_socket.h  iocpserver.h  ipaddress.h  ipc.h  logging.h  logging_file_sink_win.h  macros.h  md5.h  memory_pool.hpp  miscellaneous.h  module_safe_string.h  networkprotocoldef.h  noncopyable.h  os_ver.h  overlappedsocket.h  pc_info.h  ping.h  process.h  process.hpp  (+26 more)
include/base/: assert.h  base64.h  bind.h  bind_helpers.h  bind_internal.h  buffer_queue.h  byteorder.h  callback.h  callback_forward.h  callback_internal.h  cmdline_parse.h  compiler_specific.h  criticalsection.h  deprecation.h  driver_info.h  endianess_detect.h  event.h  file_info.h  file_util.h  flags.h  ini.h  logging.h  logging_file_sink_win.h  macros.h  md5.h  memory_pool.hpp  module_safe_string.h  os_ver.h  pc_info.h  process_util.h  random.h  registry.h  safe_compare.h  safe_conversions.h  safe_conversions_impl.h  safe_release_macro.h  schedule_task.h  singleton.h  string.h  string_helper.h  (+9 more)
include/encrypt/: encrypt_helper.h
include/net/: file_download.h  file_transfer_base.h  global_env.h  host_resolve.h  http_request.h  iocp.h  iocpserver.h  ipaddress.h  ipc.h  msgpack_helper.hpp  networkprotocoldef.h  overlappedsocket.h  ping.h  socket.h  socketaddress.h
include/ppxbase/: assert.h  base64.h  bind.h  bind_helpers.h  bind_internal.h  buffer_queue.h  byteorder.h  callback.h  callback_forward.h  callback_internal.h  cmdline_parse.h  compiler_specific.h  condition_task.h  console_print.h  constructormagic.h  criticalsection.h  deprecation.h  directory_monitor.h  display_monitors.h  driver_info.h  endianess_detect.h  event.h  file_info.h  file_util.h  flags.h  host_resolve.h  ini.h  internet_availability_checker.h  iocp.h  iocp_socket.h  iocpserver.h  ipaddress.h  ipc.h  logging.h  logging_file_sink_win.h  macros.h  md5.h  memory_pool.hpp  miscellaneous.h  module_safe_string.h  (+38 more)
ppx_nuget/: ppx_1.0.0.1.nuspec
src/: .clang-format  CMakeLists.txt  akali.cpp  assert.cpp  base64.cpp  bind_helpers.cpp  buffer_queue.cpp  byteorder.cpp  callback_internal.cpp  cmdline_parse.cpp  condition_task.cpp  console_print.cpp  criticalsection.cpp  directory_monitor.cpp  display_monitors.cpp  driver_info.cpp  endianess_detect.cpp  event.cpp  file_info.cpp  file_util.cpp  flags.cpp  host_resolve.cpp  ini.cpp  internet_availability_checker.cpp  iocp.cpp  iocp_socket.cpp  iocpserver.cpp  ipaddress.cpp  ipc.cpp  logging.cpp  logging_file_sink_win.cpp  md5.cpp  miscellaneous.cpp  networkprotocoldef.cpp  os_ver.cpp  overlappedsocket.cpp  pc_info.cpp  ping.cpp  ppx.cpp  ppx_base.cpp  (+23 more)
src/base/: assert.cpp  base64.cpp  bind_helpers.cpp  buffer_queue.cpp  byteorder.cpp  callback_internal.cpp  cmdline_parse.cpp  criticalsection.cpp  display_monitors.cpp  driver_info.cpp  endianess_detect.cpp  event.cpp  file_info.cpp  file_util.cpp  flags.cpp  ini.cpp  logging.cpp  logging_file_sink_win.cpp  md5.cpp  os_ver.cpp  pc_info.cpp  process_util.cpp  random.cpp  registry.cpp  schedule_task.cpp  string.cpp  string_helper.cpp  stringencode.cpp  thread_util.cpp  timer.cpp  timeutils.cpp  win_main.cpp  win_service_base.cpp  win_service_installer.cpp  win_util.cpp
src/encrypt/: encrypt_helper.cpp
src/net/: file_download.cpp  file_transfer_base.cpp  global_env.cpp  host_resolve.cpp  http_request.cpp  iocp.cpp  iocpserver.cpp  ipaddress.cpp  ipc.cpp  networkprotocoldef.cpp  overlappedsocket.cpp  ping.cpp  socketaddress.cpp
tests/: CMakeLists.txt  filesystem_test.cpp  ini_test.cpp  ipc_test.cpp  process_test.cpp  regkey_test.cpp  schedule_task_test.cpp  shortcut_test.cpp  string_test.cpp  test01.cpp  thread_test.cpp
tests/test01/: CMakeLists.txt  client.cpp  ipc_test.cpp  ipc_test.h  main.cpp  server.cpp
tests/test02/: CMakeLists.txt  client.cpp  ipc_test.cpp  ipc_test.h  main.cpp  server.cpp
tests/test03/: CMakeLists.txt  main.cpp
vsproject/: build_all.bat  packages.config  ppx.sln  ppx.vcxproj  ppx.vcxproj.filters
vsproject/test/test-01/: DisplayMonitorTest.cpp  DisplayMonitorTest.h  IPCTest.cpp  IPCTest.h  StringTest.cpp  StringTest.h  stdafx.cpp  stdafx.h  test-01.cpp  test-01.vcxproj  test-01.vcxproj.filters
vsproject/test/test-02/: stdafx.cpp  test-02.cpp  test-02.vcxproj  test-02.vcxproj.filters
vsproject/test/test-03/: stdafx.cpp  test-03.cpp  test-03.vcxproj  test-03.vcxproj.filters
vsproject/test/test-nuget/: packages.config  stdafx.h  test-nuget.cpp  test-nuget.vcxproj  test-nuget.vcxproj.filters
